--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             </div>
         </div>
     </div>
+    <div id= "open-source"> <a href="https://github.com/Reshvinder/SheCodesChallenge">Open-source code</a> by Reshvinder Bhullar </div>
 
     </div>
     <script src="src/script.js"></script>
