--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <i class="fas fa-cloud-showers-heavy"></i>
+                                <img src="" alt="Clear" id="icon">
+                        
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
