--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     <div class="card-text">
                                         <span class="temp" id="current-temp">15</span>
                                         <span class="units">
-                                            <a href="#" id="celsius-link">°C</a> |
+                                            <a href="#" id="celsius-link" class="active">°C</a> |
                                             <a href="#" id="fahrenheit-link">°F</a>
                                         </span>
 
