cleaning up final code

--- a/index.html
+++ b/index.html
@@ -108,16 +108,12 @@
             </div>
 
             <h3>
-                Forcast
+                Forecast:
             </h3>
 
             <div class="card-group" id = "forecast"></div>
 
 
-
-
-
-            <div id="last-updated"> <small> last updated 3 mins ago </small>  </div>
             <div id= "open-source"> <a href="https://github.com/Reshvinder/SheCodesChallenge" target="_blank"> <small>Open-source code</small></a> <small> by Reshvinder Bhullar </small> </div>
      
         </div>
